<resources>
    <string name="app_name">mapsTest2</string>
    <string name="title_activity_maps">Map</string>
    <string name="insert_name">insert name here</string>
    <string name="insert_type_movement">choose way of moving</string>
    <string name="insert_group_size">insert_group_size</string>
    <string name="types_movement_prompt">Choose a country</string>
    <string name="number_group_prompt">Choose a size of group</string>
    <string name="new_user_btn">New User</string>
    <string name="change_user_btn">Change User Details</string>
    <string name="keep_user_btn">Keep these details</string>
    <string name="show_location_btn">Show Location</string>
    <string name="update_location_btn">Update Location</string>
    <string name="new_user_text">Name</string>
    <string name="old_user_text">Are these details still correct for your group?</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="profile_change">Update Profile</string>
    <string name="opening_times">Opening Times</string>
    <string name="about">About Stubbers</string>
    <string name="back_map">Stubbers Map</string>
    <string name="new_user_movement_text">Method of Movement</string>
    <string name="new_user_group_size_text">Number of People in Group</string>
    <string name="new_user_number">Phone Number</string>







    <string-array name="types_movement_array">
        <item>Walking</item>
        <item>Cycling</item>
        <item>Wheelchair</item>
    </string-array>

    <string-array name="number_group_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>
