<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:id="@+id/userProfile"
    android:visibility="visible">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:id="@+id/oldUserProfile"
        android:visibility="gone">

        <android.support.v7.widget.DialogTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_user_text"
            android:textAlignment="center"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_text"
            android:id="@+id/oldUserProfileName"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/types_movement_prompt"
            android:id="@+id/oldUserProfileMovement"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_group_prompt"
            android:id="@+id/oldUserProfileGroupSize"/>

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_group_prompt"
            android:id="@+id/oldUserProfileNumber"/>

        <Button
            android:id="@+id/changeUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_user_btn"
            android:visibility="visible"/>

        <Button
            android:id="@+id/keepUserBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keep_user_btn"
            android:visibility="visible"/>

    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical"
        android:id="@+id/newUserProfile"
        android:visibility="gone">

        <android.support.v7.widget.DialogTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_text"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/new_user_text"
            android:inputType="textPersonName"
            android:id="@+id/insertName"
            android:visibility="visible"
            android:paddingBottom="10dp"/>

        <android.support.v7.widget.DialogTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_movement_text"
            android:textAlignment="center"
            android:paddingBottom="4dp"/>

        <Spinner
            android:id="@+id/insertMovement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/types_movement_array"
            android:prompt="@string/types_movement_prompt"
            android:visibility="visible"
            android:paddingBottom="10dp"/>

        <android.support.v7.widget.DialogTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_group_size_text"
            android:textAlignment="center"
            android:paddingBottom="4dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/insert_group_size"
            android:entries="@array/number_group_array"
            android:prompt="@string/number_group_prompt"
            android:visibility="visible"
            android:paddingBottom="10dp"/>

        <android.support.v7.widget.DialogTitle
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user_number"
            android:textAlignment="center"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:hint="@string/new_user_number"
            android:inputType="phone"
            android:id="@+id/insertPhoneNo"
            android:visibility="visible"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/newUserbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_user_btn"
            android:visibility="visible"/>

    </LinearLayout>

</LinearLayout>

